create github pages

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <div class="container">
         <div class="mbr-section-head">
             <h4 class="mbr-section-title mbr-fonts-style mb-0 display-2"><strong>Featured Videos</strong></h4>
-            <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7">Check out Few of My Projects</h5>
+            <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7">Check out a few of My Projects</h5>
         </div>
         <div class="row mt-4">
             <div class="col-12 col-md-6 video-block">
@@ -261,7 +261,7 @@
             </div>
             <div class="col-12 col-md-6 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/629347757?autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-                <p class="mbr-text pt-2 mbr-fonts-style display-4">Well-being &amp; Beauty campaign with Rosa Acosta ft Body by Tamika</p>
+                <p class="mbr-text pt-2 mbr-fonts-style display-4">Well-being &amp; Beauty campaign with <strong>Rosa Acosta ft Body by Tamika</strong></p>
             </div>
         </div>
     </div>
@@ -589,7 +589,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="0toRryGlTzHdksjTyvEc8me8fFWJoke9624Ynsvc7HdgN4sQ2inczC1TH2euTSnfrzouOYt1nIVr1Q6c0+uVrGxDGo1bWV7lOrmVXPJ+5Z59oypFVNjx8VQSeeqBlWPt.bfdx/urOSBOTHwKZrS9cYc0EespzdTOjeO4a9KaQa6oXBpchu0kSk/e8ig2YmnmhO1ekQhgZnbYj/LgJFcyy/Kg+Z5c8OsQkTf3WHndt2Y2oLRJOtsnC5CdENssHL0gX">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NmEhsaLuiSXdczYBHJmk1ZdhNafrOGbdvsR7vvXJvCy79zfYXhZMuLUzbWIRbxc8MURJx4tA7Cypb7jnriK+xLc3C4r2JyGVPS+AbNJjHlR3+zmOsyN28k1jEU7pLez1.t/MkosM+elJ2oSHNCA4cisKFT5kiMtK1gRPpNIo9rLqzfMouK7nDs0xnuGr57GIC1hz9ZGU7rU28tsDcX+bLEbn9Ns9YGjCmtmOUmDYOcoX/p4918csAuGugdpKJZ0r1">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
