create github pages

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-12 col-md-8">
 
-                <h2 class="mbr-fonts-style mb-3 mbr-section-subtitle display-4"><strong>i'm Landry amos</strong></h2>
+                <h2 class="mbr-fonts-style mb-3 mbr-section-subtitle display-4"><strong>Hi, i'm Landry amos</strong></h2>
 
                 <h1 class="mbr-fonts-style mb-3 mbr-section-title display-2"><strong>A Filmmaker</strong><br><strong>&amp; Photographer.</strong></h1>
 
@@ -320,7 +320,7 @@
             <div class="col-12 col-md-6 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/629410916?autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                 <p class="mbr-text pt-2 mbr-fonts-style display-4">
-                    Book Launch Event for author <strong>Peta Gaye</strong></p>
+                    Book Launch Event video for author <strong>Peta Gaye</strong></p>
             </div>
         </div>
     </div>
@@ -339,7 +339,7 @@
             </div>
             <div class="col-12 col-md-6 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/629464268?autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-                <p class="mbr-text pt-2 mbr-fonts-style display-4">2018 The Hedonist Magazine shoot with <strong>Anthony Hamilton</strong></p>
+                <p class="mbr-text pt-2 mbr-fonts-style display-4">BTS Magazine shoot with <strong>Anthony Hamilton</strong></p>
             </div>
         </div>
     </div>
@@ -589,7 +589,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NmEhsaLuiSXdczYBHJmk1ZdhNafrOGbdvsR7vvXJvCy79zfYXhZMuLUzbWIRbxc8MURJx4tA7Cypb7jnriK+xLc3C4r2JyGVPS+AbNJjHlR3+zmOsyN28k1jEU7pLez1.t/MkosM+elJ2oSHNCA4cisKFT5kiMtK1gRPpNIo9rLqzfMouK7nDs0xnuGr57GIC1hz9ZGU7rU28tsDcX+bLEbn9Ns9YGjCmtmOUmDYOcoX/p4918csAuGugdpKJZ0r1">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="VenbylA4fz/jsfE1gjl9Ey+A1M5T4P3gyNCJo1B7dJO5xOkWwnbf5oBrLxd3WTD/rFqIlJWcC1esJT5UkFkyD/zQtR7ayFuDaBYtDA0vfwfQ9ejrwp8xh+/cJNyQJ3rS.M3C51Rz6BnkJ3b9cz2fm4NswWFgPfAeP8IiCMjhh46z5s503E2iP611CweEzF8KZwpH0HcgXS+RcqQoUVI4JlCQLcA/mEiDkx8A0M6uD2bSob0dQLvseABe/xykBiTKm">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
