create github pages

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-8">
+            <div class="col-12 col-md-7">
 
                 <h2 class="mbr-fonts-style mb-3 mbr-section-subtitle display-4"><strong>Hi, i'm Landry amos</strong></h2>
 
@@ -114,14 +114,14 @@
             
             <div class="col-12 col-md-5">
                 <div class="image-wrapper">
-                    <img src="assets/images/46125418-829397887451790-6601627237507709693-n-582x728.jpeg" alt="Mobirise">
+                    <img src="assets/images/tmr-886x1329.jpg" alt="Mobirise">
                 </div>
             </div>
 
             <div class="col-12 col-md">
                 <div class="text-wrapper">                   
                     <div class="main-heading">
-                        <h3 class="title mbr-section-title mbr-fonts-style display-5"><strong>I’m Specialized in Producing&nbsp;<a href="index.html" class="text-primary">Top Quality Video &amp; Photo Content.&nbsp;</a></strong></h3>
+                        <h3 class="title mbr-section-title mbr-fonts-style display-5"><strong>Specialized in Producing&nbsp;<a href="index.html" class="text-primary">Top Quality Video &amp; Photo Content.&nbsp;</a></strong></h3>
                     </div>
 
                     <p class="text-block mbr-text mbr-fonts-style display-7">I am a New York-based Producer, Filmmaker, photographer, Content Strategist and Designer with over 6 years of experience.<br>&nbsp;<br>For the past 3 years, I've had the opportunity to work with dozens of Celebrities, actors, actresses, music artists and big influencers with millions of followers like former miss universe <a href="https://www.instagram.com/zuleykarivera/" class="text-primary" target="_blank">Zuleyka Rivera</a>&nbsp;(2.2m), <a href="https://www.instagram.com/marjodsousa/" class="text-primary" target="_blank">Marjorie de Sousa</a> (7.5m), <a href="https://www.instagram.com/iamjuju_/" class="text-primary" target="_blank">Juju</a>&nbsp;(3.1m), <a href="https://www.instagram.com/dreamdoll/" class="text-primary" target="_blank">DreamDoll</a>&nbsp;(4.4m), <a href="https://www.instagram.com/arrogant_tae123/" class="text-primary" target="_blank">Arrogant Tae</a>&nbsp;(2.4m),&nbsp;<a href="https://www.instagram.com/gutierrezary/" class="text-primary" target="_blank">Ariadna Gutiérrez</a>&nbsp;(3.4m)&nbsp;<a href="https://www.instagram.com/anthonyhamiltonofficial/" class="text-primary" target="_blank">Anthony Hamilton</a>&nbsp;(1m), <a href="https://www.instagram.com/kjsmithofficial/" class="text-primary" target="_blank">KJ Smith</a> (402k), <a href="https://www.instagram.com/emilytosta/" class="text-primary" target="_blank">Emily Tosta</a> (272k), <a href="https://www.instagram.com/rosaacosta/" class="text-primary" target="_blank">Rosa Acosta</a> (1.6m), <a href="https://www.instagram.com/lelihernandez/" class="text-primary" target="_blank">Leli Hernandez</a> (1m) and many more featured in Big Magazines. I've also worked on different type of projects with many Brands and individuals all over the country. I serve a variety of industries from Fashion &amp; Beauty, Real Estate, Music Videos, Lifestyle, Health &amp; Fitness, Corporate, Events etc...<br></p>
@@ -186,10 +186,10 @@
                     <p class="date mbr-fonts-style display-4"><strong>2016-2021</strong></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p class="workplace mbr-fonts-style display-7"><strong>Freelancer, Owner<br>- The Hit Studios.</strong></p>
+                    <p class="workplace mbr-fonts-style display-7"><strong>Freelancer, Owner<br>- <a href="http://thehitfilms.com" class="text-primary" target="_blank">The Hit Studios</a>.</strong></p>
                 </div>
                 <div class="col-12 col-sm-6">
-                    <p class="description mbr-fonts-style display-4">I created The Hit Studios in 2016 and have been offering freelancing photography and videography services to a wide variety of clients. From Portrait, studio, lifestyle and products photography to Beauty &amp; Fashion films, Health &amp; Fitness videos, Corporate &amp; Interviews videos, Real Estate Videos, Commercials, Music videos, Events videos and Weddings videos</p>
+                    <p class="description mbr-fonts-style display-4">I created The Hit Studios in 2016 and have been offering freelancing photography, videography and editing services to a wide variety of clients. From Portrait, studio, lifestyle and products photography to Beauty &amp; Fashion films, Health &amp; Fitness videos, Corporate &amp; Interviews videos, Real Estate Videos, Commercials, Music videos, Events videos and Weddings videos</p>
                 </div>
             </div>
         </div>
@@ -206,10 +206,10 @@
                     <p class="date mbr-fonts-style display-4"><strong>2017-2021</strong></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p class="workplace mbr-fonts-style display-7"><strong>Designer, Content Strategist , Co-founder<br>- Upgain Dev.</strong></p>
+                    <p class="workplace mbr-fonts-style display-7"><strong>Designer, Content Strategist , Co-founder<br>- <a href="https://upgain.co/" class="text-primary" target="_blank">Upgain Dev</a>.</strong></p>
                 </div>
                 <div class="col-12 col-sm-6">
-                    <p class="description mbr-fonts-style display-4">Co-founded Upgain with a partner with the mission to help businesses adapt to the emerging competitive “online-based” market of our time.&nbsp;We've been helping several small businesses and startup companies find new innovative ways to increase their amount of customers, better their brand’s online presence and maintain customer’s loyalty with the help of the latest advertising technologies and most impactful marketing contents. With my background in Graphic and Web design and expertise in Content creation and digital marketing we were able to help over 100 small businesses elevate their brand and online presence by creating cutting-edge and innovative websites, as well as relevant, quality content that is of interest to their target group and prospects.</p>
+                    <p class="description mbr-fonts-style display-4">Co-founded Upgain, a Digital Marketing Agency, with a partner with the mission to help businesses adapt to the emerging competitive “online-based” market of our time.&nbsp;We've been helping several small businesses and startup companies find new innovative ways to increase their amount of customers, better their brand’s online presence and maintain customer’s loyalty with the help of the latest advertising technologies and most impactful marketing contents. With my background in Graphic and Web design and expertise in Content creation and digital marketing we were able to help over 100 small businesses elevate their brand and online presence by creating cutting-edge and innovative websites, as well as relevant, quality content that is of interest to their target group and prospects.</p>
                 </div>
             </div>
         </div>
@@ -226,10 +226,10 @@
                     <p class="date mbr-fonts-style display-4"><strong>2018-2021</strong></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p class="workplace mbr-fonts-style display-7"><strong>Video Producer, Editor<br>- Handz Dirty PR.</strong></p>
+                    <p class="workplace mbr-fonts-style display-7"><strong>Video Producer, Editor<br>- <a href="http://www.handzdirtypr.com/#!/placement" class="text-primary" target="_blank">Handz Dirty PR</a>.</strong></p>
                 </div>
                 <div class="col-12 col-sm-6">
-                    <p class="description mbr-fonts-style display-4">In partnership with&nbsp;Handz Dirty PR, A full service boutique-sized PR firm based in NYC, I've been in charge of directing producing high quality cinematic BTS videos for different magazine's covers shoots with celebrities all over the country, as well as different other video projects.</p>
+                    <p class="description mbr-fonts-style display-4">In partnership with&nbsp;Handz Dirty PR, A full service boutique-sized PR firm based in NYC and Owned By RoseMarie Reyes, I've been in charge of directing and producing high quality cinematic BTS videos for different magazine's covers shoots with celebrities all over the country, as well as different other video projects.</p>
                 </div>
             </div>
         </div>
@@ -252,7 +252,7 @@
     <div class="container">
         <div class="mbr-section-head">
             <h4 class="mbr-section-title mbr-fonts-style mb-0 display-2"><strong>Featured Videos</strong></h4>
-            <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7">Check out a few of My Projects</h5>
+            <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7">Here is few of my work</h5>
         </div>
         <div class="row mt-4">
             <div class="col-12 col-md-6 video-block">
@@ -484,7 +484,7 @@
 			</div><div class="card item features-image col-12 col-md-6 col-lg-4">
 				<div class="item-wrapper">
 					<div class="card-img">
-						<img src="assets/images/r-924x1386.jpg" alt="Mobirise" data-slide-to="1" data-bs-slide-to="1">
+						<img src="assets/images/fr-934x1401.jpg" alt="Mobirise" data-slide-to="1" data-bs-slide-to="1">
 					</div>
 					<div class="card-box pt-4">
 						<h4 class="card-title align-left mbr-bold mbr-fonts-style display-5">
@@ -589,7 +589,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="T/AVhTytFl7uxMe7fBRPkAtvW994V5ozsYXy9oiJ9VYCc1Xg7XWylc4JM3Ukvpjf+Z07cIbxm5LBpFclYVKANPL8iOcPg55ckW0M0E+sLanJJJ+G+TrWb8dxuSw+Glxa.76NMwxAsXlQqpHsr1BEn4gvuBZOtvc/wzG73tdsPiXPsMo8BXiJK3o6+NhJCKeGI/WDDWGOKpKmJUqLIV8sjY1YXffsya4thXD0xP3Zrw5uTz7CGUdajSpiJ/xgpQjhL">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="LDQk0ugAMdlwDp29vL563UQpjlb/k57b4g+rgVHAx7VfHt6Fvkmhxgw99hRCS4160qpDYTpBCMbLJHimukHrnEIF3HFjYK5Oc8j4C1K+WORlnsgUMawJhEnjIbje4VcX.ljTsu0olH3vU6H75IFZnG4h1btf4uXtGJjQeIiNnEPVmD4AyUOWZi5jLmQ9L/3S1LUBFr159u2f7Y4mPew5zQc6Z1+s8yavJ7XWfJaGTqPRV3k66tkytRHdWF5uRD1Db">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
