create github pages

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <div class="container">
         <div class="mbr-section-head">
             <h4 class="mbr-section-title mbr-fonts-style mb-0 display-2"><strong>Featured Videos</strong></h4>
-            <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7">Here is few of my work</h5>
+            <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7">Here are some of my projects</h5>
         </div>
         <div class="row mt-4">
             <div class="col-12 col-md-6 video-block">
@@ -589,7 +589,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qEMerI5vPMCA2sjOKIA2ZVx69Ujk3S4NJ2d85SI89j0xSGN3DgHgvR1LMU53LOOC/3konaBuAlGNqlANFwq46Iukj0onu9n6YQkS9AJ38HoOVkxfn1y2vtR1BkUagLLd.zkecqzu+BtkM9AgNwh7XXMVq0kCd5C8Bs5SOcmj7Dge0pNMVYPfTn53VyblWfxx8WVf9xtINpnNHNKzeRtf/Dtk5aubd/sT8peZyA33Qm9ZTquBfrtFYpm8FFZI73yyW">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="UalunKSu6E1/QdX7OxMaiiIBOU6AUXApLkYgbx1DmV+u2yT7orpZ8VBr+9A9HqVT0dePHwUB6syrsSR731puPEnMFh519manIDki/rmaUEW5OF8XLIloUsYr20hieeYC.p2v05ykW+rTItjWohk3RH7v/UujffSKQAZxvwM64pweVu0pSfe/9dNfK9eiCeLSpjVoukVW7nhKHYvsAVEHbpcL1kiot3rL/5oy0JqFMVPwiCwNVkT65uwBeC4+IFhw0">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
