create github pages

--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
             <div class="col-12 col-md-6 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/629393134?autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                 <p class="mbr-text pt-2 mbr-fonts-style display-4">
-                    El Especialito Magazine cover Shoot with Actress <strong>Emily Tosta</strong></p>
+                    El Especialito Magazine cover Shoot BTS with Actress <strong>Emily Tosta</strong></p>
             </div>
             <div class="col-12 col-md-6 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/629404755?autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                 <p class="mbr-text pt-2 mbr-fonts-style display-4">
-                    Fashion Shoot with actress <strong>KJ Smith</strong></p>
+                    Fashion Shoot BTS with actress <strong>KJ Smith</strong></p>
             </div>
         </div>
     </div>
@@ -589,7 +589,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="UalunKSu6E1/QdX7OxMaiiIBOU6AUXApLkYgbx1DmV+u2yT7orpZ8VBr+9A9HqVT0dePHwUB6syrsSR731puPEnMFh519manIDki/rmaUEW5OF8XLIloUsYr20hieeYC.p2v05ykW+rTItjWohk3RH7v/UujffSKQAZxvwM64pweVu0pSfe/9dNfK9eiCeLSpjVoukVW7nhKHYvsAVEHbpcL1kiot3rL/5oy0JqFMVPwiCwNVkT65uwBeC4+IFhw0">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BM03tRC4Y8ha+sh3V3tD3LSUBAzULRQAu24jq8ooayLEY42QSD7DkT4kjP8pdGmA3PHJfsH9iZjViDOXS/P++ZqFJySPvsV1b8aWBJGu/133OW9L9tA6f7HgBGClZEv3.G1Kw1pbaTgXU9p4jtVCmrcERSKWaslLgH3Neggt9Zk4wRwyzNOKR8G7m5lNm7qTFLMH/W5Nhib/7ZZVmdFFGtFeYlbnFr8v7Szky7xzngn34TuqUIJ09ly28F+xcjDE7">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
