create github pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>The Hit Studios Home</title>
   <link rel="stylesheet" href="assets/Material-Design-Icons/css/material.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -518,7 +518,7 @@
             <div class="col-12 col-lg-8">
                 
                 
-                <div class="mbr-section-btn"><a class="btn btn-secondary display-4" href="index.html#image1-d"><span class="mdi-image-camera-alt mbr-iconfont mbr-iconfont-btn"></span>SEE ALL PHOTOS&nbsp;</a> <a class="btn btn-secondary display-4" href="index.html#contact2-8"><span class="mdi-action-thumbs-up-down mbr-iconfont mbr-iconfont-btn"></span>HIRE ME NOW&nbsp;</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-secondary display-4" href="galleryphoto.html"><span class="mdi-image-camera-alt mbr-iconfont mbr-iconfont-btn"></span>SEE ALL PHOTOS&nbsp;</a> <a class="btn btn-secondary display-4" href="index.html#contact2-8"><span class="mdi-action-thumbs-up-down mbr-iconfont mbr-iconfont-btn"></span>HIRE ME NOW&nbsp;</a></div>
             </div>
         </div>
     </div>
@@ -589,7 +589,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="G3KEZwjj6bhQ9vbfhg4hIFTbC0jVEoU9ozZMnHMy+Dafgl6qEL4yl09gK6n/Wn4p7lX4BfyLee2Vh9Wsm17qPGDH+67PFk3dopMOnfajw5a/D25Aj4hTUrd2oNEAk0q7.KTbpwi1I7gY1PtKwaWifdpY1jKgxuptb4GvxMBuvObYy2s7QQFd2WIBhXgPdxSi+np+xVURhDcDCN9nmY5VB3IbhIjJH/nCyMRj/IihhDihiZaBu/W5+MpqeUtFZ8gGy">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="J++h4SY3qRn7hf5mn7pgeScuSzaQZMUJMcsNqEkRuxMe/Gb63PeQTkP69lEcExva1i1djY0VbVRycQO7Xv+x8Q76wIZ5yVBMElx34BAZUhgoLADziA3yr/5lmrsEaESv.ttJX+2d2qsfLcnRLIV1yG4BbPbnr117SOlQ+Osx70fV1pPPo8c+2pY2mbNZBuB00thF6tUj2YosMfxYMTgYrGJQbqLBZkn510YROTNGyIvDTKdz1SwZytnnDkmOrfkD6">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
