create github pages

--- a/galleryphoto.html
+++ b/galleryphoto.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobiri.se">THE HIT STUDIOS</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="index.html">THE HIT STUDIOS</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
