--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobiri.se">THE HIT STUDIOS</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="index.html">THE HIT STUDIOS</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -589,7 +589,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="J++h4SY3qRn7hf5mn7pgeScuSzaQZMUJMcsNqEkRuxMe/Gb63PeQTkP69lEcExva1i1djY0VbVRycQO7Xv+x8Q76wIZ5yVBMElx34BAZUhgoLADziA3yr/5lmrsEaESv.ttJX+2d2qsfLcnRLIV1yG4BbPbnr117SOlQ+Osx70fV1pPPo8c+2pY2mbNZBuB00thF6tUj2YosMfxYMTgYrGJQbqLBZkn510YROTNGyIvDTKdz1SwZytnnDkmOrfkD6">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="o2KUvdbkp9Qw+Bwkw0trnN1gjQHAk3BkEkGORi2bfo68qPXSJE0zQzFCg4A3Ecn9GUyKbVPEw94flpkmZUgfSkaDMhJCBrviZZr0WhLZ3D5jX/zd0jtLfiOzwUzKm/pC.yH8f/9AZPHzPeaVPWhAnadzISVXB4LLeomtpmHGjaI1NAeMa1vNyv5DIowHeuhrQK6ycsnaLz0I87jnyKstkB5nYOUv1OkFLsYzL8QtxzozTZK4Xi+UME9xBmXPgR5oT">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
