create github pages

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-12 col-md-7">
 
-                <h2 class="mbr-fonts-style mb-3 mbr-section-subtitle display-4"><strong>Hi, i'm Landry amos</strong></h2>
+                <h2 class="mbr-fonts-style mb-3 mbr-section-subtitle display-4"><strong>Hi, i'm Landry&nbsp;</strong></h2>
 
                 <h1 class="mbr-fonts-style mb-3 mbr-section-title display-2"><strong>A Filmmaker</strong><br><strong>&amp; Photographer.</strong></h1>
 
@@ -589,7 +589,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qziOZVGcdxD29CzWtP57YKpnNnL+n8mbKYpuVJL914x37Fe1JF7d9ypeLntG4ZJe5nzz7FRyd3vTMlhCpR+ZGKuS1qN1uSx5XWFYw7xaXK9zfKiHEe7SDixHPRGdGrJy.Nu/SsBY99lqTGaXGIuB5rPKc17az8dY+B1fH3kiNm/aPqbEKRVi3shoM5qhvDBgJy+yfgYahaIAHoKs03Y4VFBHITNfgkE4b5LEtqgiqLGgozJNRWPYJWEqNZZgkGLNc">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ethLxoa6uVeKeRfmziN6+EGt1SYzbNQIMs1SCIBWVkek8rb4fYKDNyJ60t+QQk+xOkFPC6N0AbQCOPPC03ILDzy3PLA6iY1vTHk+VaBM04xgfu7YSNn01q8BR1LLABpG.SoYmt7NtqzJsgRWW6WV8cSb6kQFkCuBlznvj/O/y9vot5nGgXCQJuCAYlY4JNqKmQrj5AWOA9fDPe9YiDwRPj144kXpUt9ZuULre1BoAko3Esc6Dwfn9ihc1BU1auLXt">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
