create github pages

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 			<div class="card item features-image col-12 col-md-6 col-lg-4">
 				<div class="item-wrapper">
 					<div class="card-img">
-						<img src="assets/images/65-924x924.jpg" alt="Mobirise">
+						<img src="assets/images/16-938x938.jpg" alt="Mobirise">
 					</div>
 					<div class="card-box pt-4">
 						<h4 class="card-title align-left mbr-bold mbr-fonts-style display-5">
@@ -542,16 +542,16 @@
                     <h3 class="mbr-section-title mbr-fonts-style display-5"><strong>Contact</strong></h3>
                     <p class="mbr-fonts-style description display-4">Feel free to contact me for any inquiry below I will get back to you as soon as possible. Also provide information on what kind of project you're interested on executing.</p>
                     <p class="mbr-fonts-style contacts-name display-4">EMAIL:</p>
-                    <p class="mbr-fonts-style contacts-info display-4">landryamos@thehitfilms.com</p>
+                    <p class="mbr-fonts-style contacts-info display-4">thehitfilms@gmail.com</p>
                     <p class="mbr-fonts-style contacts-name display-4">PHONE:</p>
                     <p class="mbr-fonts-style contacts-info margin display-4">+1 347 280 540</p>
-                    <div class="col-12 col-md-auto mbr-section-btn"><a type="submit" class="btn gray-button display-4"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span>
-                        Instagram</a></div>
+                    <div class="col-12 col-md-auto mbr-section-btn"><a type="submit" class="btn gray-button display-4"><span class="mdi-action-room mbr-iconfont mbr-iconfont-btn"></span>
+                        New York</a></div>
                 </div>
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bagnwFgURsVLGgdnfDow1Jik2X7Zg8nn5ZuDCA0+D1w8H2vRcb9Q4kzrlrS5/0m1zSzP4ps/o1nTWYwcDETsDV0yUFT9q4n1I3kF3pLIrYRRp3qUVZ1cdGuGcWr+8F5c.KQlLx3egkyU4MXPf1wt83/W/udi1Ci07F5zh/9FnMN0g8l+gMtNooIy2YA6EzOkZIS8sEebG597n5TYZSqNcncbeXmbySbrDa3yBG+PCEUu1gsu/xkEye883Ifla9/Ut">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="4ADjlPsP26eveJQ5CUQFHqnnM0hZU1Zl5zgS9Cpr2rTiyg7a6Z9jLauKbfQr1YbT4rOgn1ZJVDCu5GXXgTL3kfmb6YQlnJbwSsImPdp+6pKJrPQHLLt7ECIJDEFu3Odw.nDz2szxbtgW5z/XJ74CmLrUM8dBPF7WoPdev7Pi7QOq2RwSyYLc6lShGLLJdCfPMYzUN8Lqnea7f/gXCQjRDzpvPWmvrXyynNwUUKCVTLeXg89VGKGbxfA6+ldwnyMr4">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
