create github pages

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
             <div class="col-12 col-md-6 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/629347757?autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-                <p class="mbr-text pt-2 mbr-fonts-style display-4">Well-being &amp; Beauty campaign with <strong>Rosa Acosta ft Body by Tamika</strong></p>
+                <p class="mbr-text pt-2 mbr-fonts-style display-4">Well-being &amp; Beauty campaign with Celebrity&nbsp;<strong>Rosa Acosta ft Body by Tamika</strong></p>
             </div>
         </div>
     </div>
@@ -280,7 +280,7 @@
             <div class="col-12 col-md-6 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/629386694?autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                 <p class="mbr-text pt-2 mbr-fonts-style display-4">
-                    Health &amp; Fitness campaign with <strong>Juju ft Body by Tamika</strong></p>
+                    Health &amp; Fitness campaign with celebrity&nbsp;<strong>Juju &amp; Body by Tamika</strong></p>
             </div>
         </div>
     </div>
@@ -295,12 +295,12 @@
             <div class="col-12 col-md-6 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/629393134?autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                 <p class="mbr-text pt-2 mbr-fonts-style display-4">
-                    El Especialito Magazine cover Shoot BTS with Actress <strong>Emily Tosta</strong></p>
+                    El Especialito Magazine cover Shoot BTS with celebrity Actress <strong>Emily Tosta</strong></p>
             </div>
             <div class="col-12 col-md-6 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/629404755?autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                 <p class="mbr-text pt-2 mbr-fonts-style display-4">
-                    Fashion Shoot BTS with actress <strong>KJ Smith</strong></p>
+                    Fashion Shoot BTS with celebrity actress <strong>KJ Smith</strong></p>
             </div>
         </div>
     </div>
@@ -569,7 +569,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Y5vqgOK9uOVhdjkT79iWa1pq+bTNNGYoBs/wsiuQgfsQJMqNDjuIIEkMz2IpG2zWevOU+wgQwchDuhkqGTfMZB49oPx2cCKZkmoc2Pyn/JYsV/jJoMm85Ardt2tx0KNC.43py+qIp7T5+RPUUAyslthUHiWW5AZeIknDyz8nEXV8PsJaULjcfvMKHh4VRlruKGePSZoxEEi7VeudzweEglU+WFaSReFRCRWy34+bOjNxlI0cbChJ/lkosEbaxzDgr">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="LWUkXsWC7qVKbIItXWegJfMYtGx6oCtB42sSUo2toJOhIRsq87UnqCsbGod/s910QwYN/xZQGivpQYyLQrtZdYUvHj9Jqtmhgyg6mxhshGlXl6BTrVhnDUB0hqoevrq4.mWMCXLwVOf2Nm7Y5L2hdmt+WSTaT7H7N078Ep99zBasgPQIjjlEUNZq5jWUI0iHUtlt8AiFwHh7iIsXraC8LGrpuL0Ng6OGjdNWDAWtusUfWq4wWGPQFqEy5LX4qxseW">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
